tests/NormalTests/paczka1/fuzzy1/67991281.err
Error in line 2: AkYPl S866 46,4
Error in line 7: AkYPl A833 139,21
Error in line 10: S866 S866 75,3
Error in line 3: AkYPl A833 34,0
Error in line 11: W5Sx4wR S866 8,7
Error in line 30: 1lC S45 11,4
Error in line 32: 1KcNNg S45 22,2
